# We chose "hatchling" as our build system of choice as it supports reproducible
# builds and is recommended by the "Packaging Python Projects" tutorial by PyPA.
[build-system]
# We pin the hatchling version for reproducibility reasons.
requires = ["hatchling==1.8.0"]
build-backend = "hatchling.build"

# Specify which files and directories should be included in the build artifacts.
# This is done to prevent adding unnecessary files to the releases.
[tool.hatch.build.targets.sdist]
include = [ "/src", "/requirements-build.txt" ]

[project]
name = "tutorial_base_jl"
version = "0.0.3"
authors = [
  { name="Joshua Lock", email="jlock@vmware.com" },
]
description = "Package created during OSS Europe 2022 tutorial"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/joshuagl/tutorial-base"
"Bug Tracker" = "https://github.com/joshuagl/tutorial-base/issues"
